cmake_minimum_required(VERSION 3.26)

project(EasyFetchContentTestAll)

message(STATUS "uncomment to enable test for target library")

# NOTE: Do not test all at once. There may be conflicts between some libraries

# add_subdirectory(asio)
# add_subdirectory(boost)
# add_subdirectory(cjson)
# add_subdirectory(eigen3)
# add_subdirectory(fmt)
# add_subdirectory(freeglut)
# add_subdirectory(gflags)
# add_subdirectory(googlebenchmark)
# add_subdirectory(grpc)
# add_subdirectory(gtest)
# add_subdirectory(hiredis)
# add_subdirectory(inja)
# add_subdirectory(jsoncpp)
# add_subdirectory(lcm)
# add_subdirectory(leveldb)
# add_subdirectory(libevent)
# add_subdirectory(libtomcrypt)
# add_subdirectory(libunifex)
# add_subdirectory(libuv)
# add_subdirectory(lua)
# add_subdirectory(mujoco)
# add_subdirectory(nlohmann_json)
# add_subdirectory(paho_mqtt_c)
# add_subdirectory(paho_mqtt_cpp)
# add_subdirectory(protobuf)
# add_subdirectory(range-v3)
# add_subdirectory(rapidjson)
# add_subdirectory(robinhood)
# add_subdirectory(snappy)
# add_subdirectory(spdlog)
# add_subdirectory(sqlite)
# add_subdirectory(stdexec)
# add_subdirectory(taskflow)
# add_subdirectory(tinyxml2)
# add_subdirectory(yamlcpp)
# add_subdirectory(zlib)
